; ModuleID = '/home/carl/AnghaBench/RetroArch/input/connect/extr_connect_ps3.c_hidpad_ps3_set_rumble.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/connect/extr_connect_ps3.c_hidpad_ps3_set_rumble.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hidpad_ps3_data = type { i64* }

@RETRO_RUMBLE_STRONG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i64)* @hidpad_ps3_set_rumble to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hidpad_ps3_set_rumble(i8* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.hidpad_ps3_data*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.hidpad_ps3_data*
  store %struct.hidpad_ps3_data* %10, %struct.hidpad_ps3_data** %7, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @RETRO_RUMBLE_STRONG, align 4
  %13 = icmp eq i32 %11, %12
  %14 = zext i1 %13 to i64
  %15 = select i1 %13, i32 0, i32 1
  store i32 %15, i32* %8, align 4
  %16 = load %struct.hidpad_ps3_data*, %struct.hidpad_ps3_data** %7, align 8
  %17 = icmp ne %struct.hidpad_ps3_data* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %3
  br label %40

19:                                               ; preds = %3
  %20 = load %struct.hidpad_ps3_data*, %struct.hidpad_ps3_data** %7, align 8
  %21 = getelementptr inbounds %struct.hidpad_ps3_data, %struct.hidpad_ps3_data* %20, i32 0, i32 0
  %22 = load i64*, i64** %21, align 8
  %23 = load i32, i32* %8, align 4
  %24 = zext i32 %23 to i64
  %25 = getelementptr inbounds i64, i64* %22, i64 %24
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* %6, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %19
  br label %40

30:                                               ; preds = %19
  %31 = load i64, i64* %6, align 8
  %32 = load %struct.hidpad_ps3_data*, %struct.hidpad_ps3_data** %7, align 8
  %33 = getelementptr inbounds %struct.hidpad_ps3_data, %struct.hidpad_ps3_data* %32, i32 0, i32 0
  %34 = load i64*, i64** %33, align 8
  %35 = load i32, i32* %8, align 4
  %36 = zext i32 %35 to i64
  %37 = getelementptr inbounds i64, i64* %34, i64 %36
  store i64 %31, i64* %37, align 8
  %38 = load %struct.hidpad_ps3_data*, %struct.hidpad_ps3_data** %7, align 8
  %39 = call i32 @hidpad_ps3_send_control(%struct.hidpad_ps3_data* %38)
  br label %40

40:                                               ; preds = %30, %29, %18
  ret void
}

declare dso_local i32 @hidpad_ps3_send_control(%struct.hidpad_ps3_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
